src/main/java/clang/ClangLibrary.java

	/**
	 * \brief Legacy API to retrieve the file, line, column, and offset represented<br>
	 * by the given source location.<br>
	 * * This interface has been replaced by the newer interface<br>
	 * #clang_getExpansionLocation(). See that interface's documentation for<br>
	 * details.<br>
	 * Original signature : <code>void clang_getInstantiationLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:475</i><br>
	 * @deprecated use the safer methods {@link #clang_getInstantiationLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #clang_getInstantiationLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	void clang_getInstantiationLocation(CXSourceLocation.ByValue location, Pointer file, IntByReference line, IntByReference column, IntByReference offset);
	/**
	 * \brief Legacy API to retrieve the file, line, column, and offset represented<br>
	 * by the given source location.<br>
	 * * This interface has been replaced by the newer interface<br>
	 * #clang_getExpansionLocation(). See that interface's documentation for<br>
	 * details.<br>
	 * Original signature : <code>void clang_getInstantiationLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:475</i>
	 */
	void clang_getInstantiationLocation(CXSourceLocation.ByValue location, Pointer file, IntBuffer line, IntBuffer column, IntBuffer offset);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location.<br>
	 * * If the location refers into a macro instantiation, return where the<br>
	 * location was originally spelled in the source file.<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param file [out] if non-NULL, will be set to the file to which the given<br>
	 * source location points.<br>
	 * * \param line [out] if non-NULL, will be set to the line to which the given<br>
	 * source location points.<br>
	 * * \param column [out] if non-NULL, will be set to the column to which the given<br>
	 * source location points.<br>
	 * * \param offset [out] if non-NULL, will be set to the offset into the<br>
	 * buffer to which the given source location points.<br>
	 * Original signature : <code>void clang_getSpellingLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:503</i><br>
	 * @deprecated use the safer methods {@link #clang_getSpellingLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, java.nio.IntBuffer, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #clang_getSpellingLocation(clang.CXSourceLocation.ByValue, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	void clang_getSpellingLocation(CXSourceLocation.ByValue location, Pointer file, IntByReference line, IntByReference column, IntByReference offset);
	/**
	 * \brief Retrieve the file, line, column, and offset represented by<br>
	 * the given source location.<br>
	 * * If the location refers into a macro instantiation, return where the<br>
	 * location was originally spelled in the source file.<br>
	 * * \param location the location within a source file that will be decomposed<br>
	 * into its parts.<br>
	 * * \param file [out] if non-NULL, will be set to the file to which the given<br>
	 * source location points.<br>
	 * * \param line [out] if non-NULL, will be set to the line to which the given<br>
	 * source location points.<br>
	 * * \param column [out] if non-NULL, will be set to the column to which the given<br>
	 * source location points.<br>
	 * * \param offset [out] if non-NULL, will be set to the offset into the<br>
	 * buffer to which the given source location points.<br>
	 * Original signature : <code>void clang_getSpellingLocation(CXSourceLocation, CXFile*, unsigned*, unsigned*, unsigned*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:503</i>
	 */
	void clang_getSpellingLocation(CXSourceLocation.ByValue location, Pointer file, IntBuffer line, IntBuffer column, IntBuffer offset);
	/**
	 * \brief Retrieve a source location representing the first character within a<br>
	 * source range.<br>
	 * Original signature : <code>CXSourceLocation clang_getRangeStart(CXSourceRange)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:513</i>
	 */
	CXSourceLocation.ByValue clang_getRangeStart(CXSourceRange.ByValue range);
	/**
	 * \brief Retrieve a source location representing the last character within a<br>
	 * source range.<br>
	 * Original signature : <code>CXSourceLocation clang_getRangeEnd(CXSourceRange)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:519</i>
	 */
	CXSourceLocation.ByValue clang_getRangeEnd(CXSourceRange.ByValue range);
	/**
	 * \brief Determine the number of diagnostics in a CXDiagnosticSet.<br>
	 * Original signature : <code>int clang_getNumDiagnosticsInSet(CXDiagnosticSet)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:580</i>
	 */
	int clang_getNumDiagnosticsInSet(Pointer Diags);
	/**
	 * \brief Retrieve a diagnostic associated with the given CXDiagnosticSet.<br>
	 * * \param Diags the CXDiagnosticSet to query.<br>
	 * \param Index the zero-based diagnostic number to retrieve.<br>
	 * * \returns the requested diagnostic. This diagnostic must be freed<br>
	 * via a call to \c clang_disposeDiagnostic().<br>
	 * Original signature : <code>CXDiagnostic clang_getDiagnosticInSet(CXDiagnosticSet, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:591</i>
	 */
	Pointer clang_getDiagnosticInSet(Pointer Diags, int Index);
	/**
	 * \brief Deserialize a set of diagnostics from a Clang diagnostics bitcode<br>
	 * file.<br>
	 * * \param file The name of the file to deserialize.<br>
	 * \param error A pointer to a enum value recording if there was a problem<br>
	 *        deserializing the diagnostics.<br>
	 * \param errorString A pointer to a CXString for recording the error string<br>
	 *        if the file was not successfully loaded.<br>
	 * * \returns A loaded CXDiagnosticSet if successful, and NULL otherwise.  These<br>
	 * diagnostics should be released using clang_disposeDiagnosticSet().<br>
	 * Original signature : <code>CXDiagnosticSet clang_loadDiagnostics(const char*, CXLoadDiag_Error*, CXString*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:637</i><br>
	 * @deprecated use the safer methods {@link #clang_loadDiagnostics(java.lang.String, java.nio.IntBuffer, clang.CXString)} and {@link #clang_loadDiagnostics(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, clang.CXString)} instead
	 */
	@Deprecated
	Pointer clang_loadDiagnostics(Pointer file, IntByReference error, CXString errorString);
	/**
	 * \brief Deserialize a set of diagnostics from a Clang diagnostics bitcode<br>
	 * file.<br>
	 * * \param file The name of the file to deserialize.<br>
	 * \param error A pointer to a enum value recording if there was a problem<br>
	 *        deserializing the diagnostics.<br>
	 * \param errorString A pointer to a CXString for recording the error string<br>
	 *        if the file was not successfully loaded.<br>
	 * * \returns A loaded CXDiagnosticSet if successful, and NULL otherwise.  These<br>
	 * diagnostics should be released using clang_disposeDiagnosticSet().<br>
	 * Original signature : <code>CXDiagnosticSet clang_loadDiagnostics(const char*, CXLoadDiag_Error*, CXString*)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:637</i>
	 */
	Pointer clang_loadDiagnostics(String file, IntBuffer error, CXString errorString);
	/**
	 * \brief Release a CXDiagnosticSet and all of its contained diagnostics.<br>
	 * Original signature : <code>void clang_disposeDiagnosticSet(CXDiagnosticSet)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:644</i>
	 */
	void clang_disposeDiagnosticSet(Pointer Diags);
	/**
	 * \brief Retrieve the child diagnostics of a CXDiagnostic. <br>
	 * * This CXDiagnosticSet does not need to be released by<br>
	 * clang_diposeDiagnosticSet.<br>
	 * Original signature : <code>CXDiagnosticSet clang_getChildDiagnostics(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:652</i>
	 */
	Pointer clang_getChildDiagnostics(Pointer D);
	/**
	 * \brief Determine the number of diagnostics produced for the given<br>
	 * translation unit.<br>
	 * Original signature : <code>int clang_getNumDiagnostics(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:658</i>
	 */
	int clang_getNumDiagnostics(ClangLibrary.CXTranslationUnit Unit);
	/**
	 * \brief Retrieve a diagnostic associated with the given translation unit.<br>
	 * * \param Unit the translation unit to query.<br>
	 * \param Index the zero-based diagnostic number to retrieve.<br>
	 * * \returns the requested diagnostic. This diagnostic must be freed<br>
	 * via a call to \c clang_disposeDiagnostic().<br>
	 * Original signature : <code>CXDiagnostic clang_getDiagnostic(CXTranslationUnit, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:669</i>
	 */
	Pointer clang_getDiagnostic(ClangLibrary.CXTranslationUnit Unit, int Index);
	/**
	 * \brief Retrieve the complete set of diagnostics associated with a<br>
	 *        translation unit.<br>
	 * * \param Unit the translation unit to query.<br>
	 * Original signature : <code>CXDiagnosticSet clang_getDiagnosticSetFromTU(CXTranslationUnit)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:678</i>
	 */
	Pointer clang_getDiagnosticSetFromTU(ClangLibrary.CXTranslationUnit Unit);
	/**
	 * \brief Destroy a diagnostic.<br>
	 * Original signature : <code>void clang_disposeDiagnostic(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:684</i>
	 */
	void clang_disposeDiagnostic(Pointer Diagnostic);
	/**
	 * \brief Format the given diagnostic in a manner that is suitable for display.<br>
	 * * This routine will format the given diagnostic to a string, rendering<br>
	 * the diagnostic according to the various options given. The<br>
	 * \c clang_defaultDiagnosticDisplayOptions() function returns the set of<br>
	 * options that most closely mimics the behavior of the clang compiler.<br>
	 * * \param Diagnostic The diagnostic to print.<br>
	 * * \param Options A set of options that control the diagnostic display,<br>
	 * created by combining \c CXDiagnosticDisplayOptions values.<br>
	 * * \returns A new string containing for formatted diagnostic.<br>
	 * Original signature : <code>CXString clang_formatDiagnostic(CXDiagnostic, unsigned)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:769</i>
	 */
	CXString.ByValue clang_formatDiagnostic(Pointer Diagnostic, int Options);
	/**
	 * \brief Retrieve the set of display options most similar to the<br>
	 * default behavior of the clang compiler.<br>
	 * * \returns A set of display options suitable for use with \c<br>
	 * clang_displayDiagnostic().<br>
	 * Original signature : <code>int clang_defaultDiagnosticDisplayOptions()</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:779</i>
	 */
	int clang_defaultDiagnosticDisplayOptions();
	/**
	 * \brief Determine the severity of the given diagnostic.<br>
	 * Original signature : <code>CXDiagnosticSeverity clang_getDiagnosticSeverity(CXDiagnostic)</code><br>
	 * <i>native declaration : src/main/c/clang-c/Index.h:784</i>
	 */
	int clang_getDiagnosticSeverity(Pointer CXDiagnostic1);
